[package]
name = "link-checker"
description = "Check all URL strings in a repository and validate if they are valid and working."
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.9", features = ["derive"] }
regex = "1.8.4"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
walkdir = "2.3.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
